# radical-ramble

./: .gitignore  .gitingore  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini
config/: bclstm.dev.yaml  bclstm.yaml  ctx_rnn.dev.yaml  ctx_rnn.yaml  ctxdev.yaml  simpledev.yaml  textcnn.yaml
incubator/: __init__.py  config.py  data.py  glove.py  run.py  train.py  util.py
incubator/datasets/: __init__.py  meld_contextual_text_dataset.py  meld_linear_text_dataset.py
incubator/models/: __init__.py  base_model.py  bc_lstm.py  contextual_rnn.py  contextual_simple.py  linear_cnn.py  linear_cnn_rnn.py  linear_rnn.py  linear_rnn_classifier.py  simple.py  simple_classifier.py
notebooks/: Data Exploration.ipynb  Data Tests.ipynb
notebooks/.ipynb_checkpoints/: Data Exploration-checkpoint.ipynb
tests/: helpers.py  test_data.py  test_glove.py  test_madewithml_incubator_2020.py  test_models.py  test_train.py  test_util.py
